<resources>
    <string name="app_name">football_club_dicoding</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_next">NEXT</string>
    <string name="tab_text_last">LAST</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="teama">TeamA</string>
    <string name="vs">vs</string>
    <string name="teamb">TeamB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">3 vs 0</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="mid_fields">Mid Fields</string>
    <string name="forwards">Forward</string>
    <string name="substitutes">Substitutes</string>
</resources>
