<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailEventActivity">

    <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDate"
            android:text="@string/app_name"
            style="@style/CenterText"
            android:textColor="#DDAA30"/>

    <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/linearA"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            android:text="@string/score"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:textStyle="bold"/>

    <LinearLayout
            android:id="@+id/linearA"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tvScore"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/ivTeamA"
                android:src="@mipmap/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/CenterText"
                android:id="@+id/tvTeamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teama"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearB"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tvScore"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/ivTeamB"
                android:src="@mipmap/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/CenterText"
                android:id="@+id/tvTeamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamb"/>
    </LinearLayout>

    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/linearA"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/linearGoals"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tvGoalsA"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvGoals"
                android:text="@string/goals"
                android:layout_weight="1"
                style="@style/CenterText"
                android:textColor="#DDAA30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvGoalsB"
                android:text="@string/goals"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/linearGoals"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/linearShots"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tvShotsA"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/shots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvShots"
                android:text="@string/shots"
                android:layout_weight="1"
                style="@style/CenterText"
                android:textColor="#DDAA30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvShotsB"
                android:text="@string/shots"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/linearShots"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/linearGoalKeeper"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tvGoalKeeperA"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/goal_keeper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvGoalKeeper"
                android:text="@string/goal_keeper"
                android:layout_weight="1"
                style="@style/CenterText"
                android:textColor="#DDAA30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvGoalKeeperB"
                android:text="@string/goal_keeper"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/linearGoalKeeper"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/linearDefense"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tvDefenseA"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/defense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvDefense"
                android:text="@string/defense"
                android:layout_weight="1"
                style="@style/CenterText"
                android:textColor="#DDAA30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvDefenseB"
                android:text="@string/defense"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/linearDefense"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/linearMid"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tvMidA"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/mid_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvMid"
                android:text="@string/mid_fields"
                android:layout_weight="1"
                style="@style/CenterText"
                android:textColor="#DDAA30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvMidB"
                android:text="@string/mid_fields"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/linearMid"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/linearForward"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tvForwardA"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/forwards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvForward"
                android:text="@string/forwards"
                android:layout_weight="1"
                style="@style/CenterText"
                android:textColor="#DDAA30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvForwardB"
                android:text="@string/forwards"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/linearForward"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/linearSubstitutes"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tvSubstitutesA"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/substitutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvSubstitutes"
                android:text="@string/substitutes"
                android:layout_weight="1"
                style="@style/CenterText"
                android:textColor="#DDAA30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvSubstitutesB"
                android:text="@string/substitutes"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>